# sscma-example-rpi

./: .gitignore  .gitmodules  README.md
cmake/: package.cmake  project.cmake
components/sscma-micro/: CMakeLists.txt
components/sscma-micro/porting/: ma_config_board.h  ma_porting_platform.h
solutions/helloworld/main/: CMakeLists.txt  ma_config.h
solutions/sscma-model/: CMakeLists.txt
solutions/sscma-model/main/: CMakeLists.txt  ma_config.h  ma_engine_hailort.h  ma_model_yolov8_nms.cpp  main.cpp
solutions/sscma-node/: CMakeLists.txt
solutions/sscma-node/files/usr/share/sscma-node/models/: model.json
solutions/sscma-node/main/: CMakeLists.txt  logger.hpp  ma_config.h  ma_engine_hailort.cpp  ma_model_yolov8_nms.cpp  ma_model_yolov8_nms.h  main.cpp
solutions/sscma-node/main/node/: camera.cpp  camera.h  executor.hpp  model.cpp  model.h  server.cpp  server.h
